force-app/main/default/objects/custom_create353__c/custom_create353__c.object-meta.xml
<CustomObject>
    <label>Custom created object353</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects353</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>