force-app/main/default/objects/custom_create353__c/fields/custom_create_353field526__c.field-meta.xml
<CustomField>
    <fullName>custom_create_353field526__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 353field526</label>
    <type>Checkbox</type>
</CustomField>