force-app/main/default/objects/custom_create353__c/fields/custom_create_353field554__c.field-meta.xml
<CustomField>
    <fullName>custom_create_353field554__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 353field554</label>
    <type>Checkbox</type>
</CustomField>